parse-dashboard.oneclick.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: parse-dashboard
spec:
  selector:
    matchLabels:
      k8s-app: parse-dashboard
  template:
    metadata:
      labels:
        k8s-app: parse-dashboard
    spec:
      containers:
      - name: parse-dashboard
        image: parseplatform/parse-dashboard
        ports:
        - containerPort: 4040
---

kind: Service
apiVersion: v1
metadata:
  name: parse-dashboard
  labels:
    name: parse-dashboard
spec:
  selector:
    k8s-app: parse-dashboard
  ports:
  - port: 4040
    targetPort: 4040
    protocol: TCP
  type: NodePort
